force-app/main/default/objects/Customer_Scoping_Questionnaire__c/Customer_Scoping_Questionnaire__c.object-meta.xml
<CustomObject>
    <label>Customer Scoping Questionnaire (CSQ)</label>
    <nameField>
        <displayFormat>CSQ-{0000}</displayFormat>
        <label>Customer Scoping Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Scoping Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>