force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Opportunity__r.Account.Owner.FirstName&amp;&quot; &quot;&amp;Opportunity__r.Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>