force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/Account_Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Phone__c</fullName>
    <formula>Opportunity__r.Account.Account_Manager_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Phone</label>
    <type>Text</type>
</CustomField>