force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/Clone_Source__c.field-meta.xml
<CustomField>
    <fullName>Clone_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If populated, this indicates that this record was originally cloned with listed reference as the source record</description>
    <inlineHelpText>If populated, this indicates that this record was originally cloned with listed reference as the source record</inlineHelpText>
    <label>Clone Source</label>
    <referenceTo>Customer_Scoping_Questionnaire__c</referenceTo>
    <relationshipLabel>CSQ Cloned Records</relationshipLabel>
    <relationshipName>CSQ_Clones</relationshipName>
    <type>Lookup</type>
</CustomField>