force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/CSQ_Sales_team__c.field-meta.xml
<CustomField>
    <fullName>CSQ_Sales_team__c</fullName>
    <formula>CreatedBy.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSQ Sales team</label>
    <type>Text</type>
</CustomField>