force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/CSQ_Status__c.field-meta.xml
<CustomField>
    <fullName>CSQ_Status__c</fullName>
    <label>CSQ Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
            <value>
                <fullName>Approved_by_SM</fullName>
                <label>Approved by SM</label>
            </value>
            <value>
                <fullName>Rejected by SM</fullName>
            </value>
            <value>
                <fullName>Pick-Up Locations Approved</fullName>
            </value>
            <value>
                <fullName>Pending National Operations Manager Approval</fullName>
            </value>
            <value>
                <fullName>Fully_Approved</fullName>
                <label>Fully Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>