force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/PreApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>PreApprovalStatus__c</fullName>
    <description>Indicates the Pre-Approval status value that works in conjunction with CSQ Approval Process 1.</description>
    <inlineHelpText>Indicates the Pre-Approval status value that works in conjunction with CSQ Approval Process 1.</inlineHelpText>
    <label>Pre-Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Onboarding Approval</fullName>
            </value>
            <value>
                <fullName>Under Onboarding Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>