force-app/main/default/objects/Customer_Scoping_Questionnaire__c/fields/PreApprover__c.field-meta.xml
<CustomField>
    <fullName>PreApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who is responsible for the onboarding review, and the decider of the CSQ Pre-Approval Process. This field is auto populated to the user Id who changed Pre-Approval status to &apos;Under Onboarding Review&apos;.</description>
    <inlineHelpText>The user who is responsible for the onboarding review, and the decider of the CSQ Pre-Approval Process. This field is auto populated to the user Id who changed Pre-Approval status to &apos;Under Onboarding Review&apos;.</inlineHelpText>
    <label>Pre-Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Scoping_Questionnaires</relationshipName>
    <type>Lookup</type>
</CustomField>