force-app/main/default/objects/Customer_Scoping_Questionnaire__c/recordTypes/CSQ.recordType-meta.xml
<RecordType>
    <fullName>CSQ</fullName>
    <active>true</active>
    <label>CSQ</label>
</RecordType>