force-app/main/default/objects/Customer_Scoping_Questionnaire__c/recordTypes/Master_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Record_Type</fullName>
    <active>true</active>
    <label>Master Record Type</label>
</RecordType>