force-app/main/default/objects/Customer_Scoping_Questionnaire__c/validationRules/Unable_to_edit_Opportunity_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Unable_to_edit_Opportunity_Field</fullName>
    <active>true</active>
    <description>User should now be able to edit the Opportunity field has Opportunity field has been set</description>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Enterprise Onboarding&quot;,
ISCHANGED(Opportunity__c  ))</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>You cannot edit the Opportunity field. Please contact Customer Onboarding team to reparent the Opportunity</errorMessage>
</ValidationRule>