force-app/main/default/objects/Customer_Scoping_Questionnaire__c/listViews/CSQ_Pre_approval_under_review.listView-meta.xml
<ListView>
    <fullName>CSQ_Pre_approval_under_review</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PreApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Under Onboarding Review</value>
    </filters>
    <label>CSQ: Pre-approval under review</label>
</ListView>