force-app/main/default/objects/Customer_Scoping_Questionnaire__c/listViews/CSQ_Pre_approvals.listView-meta.xml
<ListView>
    <fullName>CSQ_Pre_approvals</fullName>
    <columns>NAME</columns>
    <columns>Legal_Entity_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>PreApprovalStatus__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>PreApprovalStatus__c</field>
        <operation>equals</operation>
        <value>Pending Onboarding Approval</value>
    </filters>
    <label>CSQ: Pre-approvals</label>
</ListView>